Cache what a provider said about a company, keyed on its LinkedIn page
Every capture of a LinkedIn company page billed the vendor and nothing
remembered the answer: the capture event fires per mandate, so one company
captured in two projects was bought twice.

V64 adds app_lm_company, one row per slug ever researched. It is vendor-sourced
only — a row a person typed is one firm's own research and stays where it is —
so the table carries no workspace, project or user, for the reason
app_lm_geocoded_place carries none. found = false is a stored miss, without
which every slug the provider does not carry is re-bought forever.

LinkedInCompanyEnricher now answers VendorCompanyRecord rather than
CapturedCompanyDetails: that record's compact constructor flattens the industry
to the universe's V1 label, so the vendor's own V2 leaf, its specialties and its
payload were gone before anything could store them. CompanyResearch reads the
cache, calls the vendor only on a miss or a stale row, and builds the
mandate-facing record from one place, so a cache hit and a fresh call fill the
triage row identically. TriageCompanyService.applyEnrichment is untouched.

Closes #446