@@ -9,12 +9,16 @@ import app.lightmove.api.core.resilience.service.VendorClientFactory;
 import app.lightmove.api.core.resilience.service.VendorRateLimiter;
 import app.lightmove.api.core.resilience.service.VendorRetryPredicate;
 import app.lightmove.api.enrichment.common.service.BrightDataSearch;
-import app.lightmove.api.triagecompany.model.CapturedCompanyDetails;
+import app.lightmove.api.enrichment.company.model.VendorCompanyRecord;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
 import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.resilience.annotation.Retryable;
 import org.springframework.web.client.RestClient;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.ObjectMapper;
 import tools.jackson.databind.PropertyNamingStrategies;
 import tools.jackson.databind.annotation.JsonNaming;
 
@@ -23,6 +27,10 @@ import tools.jackson.databind.annotation.JsonNaming;
  * lookup the person enrichment uses, against the companies dataset, whose slug field is {@code id}
  * (verified live; {@code linkedin_id} errors and {@code company_id} is LinkedIn's numeric id). It
  * shares the people lookup's timeout and retry budget because it shares the endpoint that got slow.
+ *
+ * <p>The response is read as a tree and converted, rather than bound straight to the record: the hit
+ * is kept verbatim so {@code app_lm_company.raw} can be re-mapped when the industry map improves,
+ * instead of the company being bought a second time.
  */
 @Slf4j
 public class BrightDataCompanyEnricher implements LinkedInCompanyEnricher {
@@ -32,14 +40,21 @@ public class BrightDataCompanyEnricher implements LinkedInCompanyEnricher {
     private final RestClient client;
     private final String datasetId;
     private final VendorCallGuard guard;
+    private final ObjectMapper json;
 
     public BrightDataCompanyEnricher(BrightDataSettings config, VendorClientFactory clientFactory,
                                      VendorRateLimiter rateLimiter, VendorCallGuard guard,
-                                     RestClient.Builder builder) {
+                                     RestClient.Builder builder, ObjectMapper json) {
         this.guard = guard;
+        this.json = json;
         this.datasetId = config.companyDatasetId();
         this.client = clientFactory.create(VendorClientSpec.bearer(VENDOR, config.baseUrl(),
                 config.apiKey(), config.readTimeout(), config.requestsPerSecond()), builder, rateLimiter);
+    }
+
+    @Override
+    public String provider() {
+        return VENDOR;
     }
 
     @Override
@@ -50,39 +65,41 @@ public class BrightDataCompanyEnricher implements LinkedInCompanyEnricher {
             jitterString = "${lightmove.resilience.retry-jitter}",
             multiplierString = "${lightmove.resilience.retry-multiplier}",
             maxDelayString = "${lightmove.resilience.retry-max-delay}")
-    public Optional<CapturedCompanyDetails> fetch(String linkedinSlug) {
-        BrightDataCompanyResult result = guard.call(VendorCall.of(VENDOR, "company-search"),
+    public Optional<VendorCompanyRecord> fetch(String linkedinSlug) {
+        JsonNode result = guard.call(VendorCall.of(VENDOR, "company-search"),
                 () -> client.post()
                         .uri("/datasets/search/{datasetId}", datasetId)
                         .body(BrightDataSearch.exactlyOneWhere("id", linkedinSlug))
                         .retrieve()
-                        .body(BrightDataCompanyResult.class));
+                        .body(JsonNode.class));
 
-        if (result == null || result.hits() == null || result.hits().isEmpty()) {
+        JsonNode hits = result == null ? null : result.get("hits");
+        if (hits == null || hits.isEmpty()) {
             log.info("Bright Data company dataset holds no record for {}", linkedinSlug);
             return Optional.empty();
         }
-        return toDetails(result.hits().getFirst());
+        return toRecord(linkedinSlug, hits.get(0), json);
     }
 
-    static Optional<CapturedCompanyDetails> toDetails(BrightDataCompany company) {
+    static Optional<VendorCompanyRecord> toRecord(String linkedinSlug, JsonNode hit, ObjectMapper json) {
+        BrightDataCompany company = json.treeToValue(hit, BrightDataCompany.class);
         if (company.name() == null || company.name().isBlank()) {
             return Optional.empty();
         }
-        return Optional.of(new CapturedCompanyDetails(
+        return Optional.of(new VendorCompanyRecord(
+                linkedinSlug,
                 company.name(),
                 company.industries(),
                 countryOf(company.countryCodesArray(), company.headquarters()),
                 LocationLine.of(company.headquarters()).city(),
                 company.employeesInLinkedin(),
-                null,
                 company.website(),
                 company.url(),
                 company.founded(),
                 company.about(),
                 company.logo(),
-                null,
-                null));
+                keywordsOf(company.specialties()),
+                hit.toString()));
     }
 
     /**
@@ -94,10 +111,25 @@ public class BrightDataCompanyEnricher implements LinkedInCompanyEnricher {
         return LocationLine.of(headquarters).countryOr(code);
     }
 
-    record BrightDataCompanyResult(List<BrightDataCompany> hits) {}
+    /**
+     * One comma-separated line on the page — "insurance software, insurance platform" — becomes the
+     * lower-cased keywords the market-segment filter matches, which is how
+     * {@code app_lm_apollo_companies.keywords} already spells them.
+     */
+    private static List<String> keywordsOf(String specialties) {
+        if (specialties == null || specialties.isBlank()) {
+            return List.of();
+        }
+        return Arrays.stream(specialties.split(","))
+                .map(specialty -> specialty.trim().toLowerCase(Locale.ROOT))
+                .filter(specialty -> !specialty.isEmpty())
+                .distinct()
+                .toList();
+    }
 
     @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
     record BrightDataCompany(String name, String about, String industries, String headquarters,
                              List<String> countryCodesArray, Integer employeesInLinkedin,
-                             String website, Integer founded, String logo, String url) {}
+                             String website, Integer founded, String logo, String url,
+                             String specialties) {}
 }
