@@ -2,38 +2,51 @@ package app.lightmove.api.enrichment.company.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import app.lightmove.api.enrichment.company.model.VendorCompanyRecord;
 import app.lightmove.api.triagecompany.model.CapturedCompanyDetails;
-import app.lightmove.api.enrichment.company.service.BrightDataCompanyEnricher.BrightDataCompany;
-import app.lightmove.api.enrichment.company.service.BrightDataCompanyEnricher.BrightDataCompanyResult;
 import java.io.InputStream;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.json.JsonMapper;
 
 /**
- * The company dataset record → {@link CapturedCompanyDetails} translation, against a fixture shaped
- * on the live probe: snake_case keys, ISO country codes, and plenty of fields this feature ignores.
+ * The company dataset record → {@link VendorCompanyRecord} translation, against a fixture shaped on
+ * the live probe: snake_case keys, ISO country codes, and plenty of fields this feature ignores.
  */
 class BrightDataCompanyEnricherTest {
 
     private static final JsonMapper JSON = JsonMapper.builder().build();
 
     @Test
-    @DisplayName("a company record maps into the details a researcher would have typed")
-    void aCompanyRecordMaps() {
-        CapturedCompanyDetails details = BrightDataCompanyEnricher.toDetails(fixtureCompany()).orElseThrow();
+    @DisplayName("a company record keeps the vendor's own words, payload included")
+    void aCompanyRecordKeepsWhatTheVendorSaid() {
+        VendorCompanyRecord record = fixtureRecord();
 
-        assertThat(details.companyName()).isEqualTo("SampleCo");
-        // The dataset answers in LinkedIn's V2 vocabulary and the universe publishes V1's, so the
-        // record files "Software Development" under the label the Strategy filter can ask for.
-        assertThat(details.industry()).isEqualTo("computer software");
-        assertThat(details.companyCity()).isEqualTo("Dublin");
+        assertThat(record.companyName()).isEqualTo("SampleCo");
+        // The vendor's own V2 leaf, unflattened: the cache stores this, and the triage row stores
+        // the universe label it resolves to.
+        assertThat(record.industry()).isEqualTo("Software Development");
+        assertThat(record.companyCity()).isEqualTo("Dublin");
         // The dataset speaks ISO-2; the Country column speaks names, as the Apollo rows do.
-        assertThat(details.companyCountry()).isEqualTo("Ireland");
-        assertThat(details.numEmployees()).isEqualTo(841);
+        assertThat(record.companyCountry()).isEqualTo("Ireland");
+        assertThat(record.employeesInLinkedin()).isEqualTo(841);
+        assertThat(record.foundedYear()).isEqualTo(1993);
+        // One comma-separated line on the page, lower-cased into what the market-segment filter matches.
+        assertThat(record.keywords()).containsExactly("insurance software", "insurance platform");
+        assertThat(record.raw()).contains("\"company_id\":\"10801\"");
+    }
+
+    @Test
+    @DisplayName("the details a researcher would have typed come from the same record")
+    void theRecordBecomesCapturedDetails() {
+        CapturedCompanyDetails details = fixtureRecord().asCapturedDetails().orElseThrow();
+
+        // The dataset answers in LinkedIn's V2 vocabulary and the universe publishes V1's, so the
+        // row files "Software Development" under the label the Strategy filter can ask for.
+        assertThat(details.industry()).isEqualTo("computer software");
         assertThat(details.website()).isEqualTo("https://www.sampleco.example/");
         assertThat(details.companyLinkedinUrl()).isEqualTo("https://www.linkedin.com/company/sampleco");
-        assertThat(details.foundedYear()).isEqualTo(1993);
         assertThat(details.shortDescription()).startsWith("SampleCo is a leading provider");
         assertThat(details.logoUrl()).isEqualTo("https://media.example.com/sampleco-logo.png");
         assertThat(details.annualRevenue()).isNull();
@@ -42,15 +55,16 @@ class BrightDataCompanyEnricherTest {
     @Test
     @DisplayName("a record without even a name is no answer at all")
     void aNamelessRecordIsNoAnswer() {
-        BrightDataCompany nameless =
-                new BrightDataCompany(null, "About text", null, null, null, null, null, null, null, null);
+        JsonNode nameless = JSON.readTree("""
+                {"about":"About text","industries":"Software Development"}""");
 
-        assertThat(BrightDataCompanyEnricher.toDetails(nameless)).isEmpty();
+        assertThat(BrightDataCompanyEnricher.toRecord("nameless", nameless, JSON)).isEmpty();
     }
 
-    private static BrightDataCompany fixtureCompany() {
+    private static VendorCompanyRecord fixtureRecord() {
         InputStream recorded = BrightDataCompanyEnricherTest.class
                 .getResourceAsStream("/brightdata/linkedin-company.json");
-        return JSON.readValue(recorded, BrightDataCompanyResult.class).hits().getFirst();
+        JsonNode hit = JSON.readTree(recorded).get("hits").get(0);
+        return BrightDataCompanyEnricher.toRecord("sampleco", hit, JSON).orElseThrow();
     }
 }
